# Braza-Reader-V1

./: ARCHITECTURE.md  BUILD.md  CMakeLists.txt  COMPLETE_FILE_LIST.md  DELIVERY_SUMMARY.md  EXAMPLES.md  FILES_CREATED.txt  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.txt  TERMS.docx  brv1  build.sh  cross-compile-rpi.sh
resources/: brazareader_logo.pngZone.Identifier  resources.qrc
src/: app.cpp  app.h  main.cpp
src/engine/: pdfcache.cpp  pdfcache.h  pdfloader.cpp  pdfloader.h  pdfrenderer.cpp  pdfrenderer.h  textextractor.cpp  textextractor.h
src/storage/: annotationmanager.cpp  annotationmanager.h  collectionmanager.cpp  collectionmanager.h  favoritemanager.cpp  favoritemanager.h  librarymanager.cpp  librarymanager.h  progressmanager.cpp  progressmanager.h  settingsmanager.cpp  settingsmanager.h
src/system/: touchhandler.cpp  touchhandler.h
src/ui/: aboutscreen.cpp  aboutscreen.h  collectionscreen.cpp  collectionscreen.h  libraryscreen.cpp  libraryscreen.h  mainwindow.cpp  mainwindow.h  pagewidget.cpp  pagewidget.h  readerscreen.cpp  readerscreen.h  settingsscreen.cpp  settingsscreen.h  sidebarmenu.cpp  sidebarmenu.h  termsscreen.cpp  termsscreen.h  topbar_helper.h
